<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/item_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_theme"
        android:icon="?attr/icon"
        android:title="@string/theme_title"
        app:showAsAction="ifRoom" />

</menu>


<!--app:showAsAction="collapseActionView|always"-->